auto publishing updates to notebooks

--- a/job_search.ipynb
+++ b/job_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4790852f",
+   "id": "e8e5474c",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce2c5669",
+   "id": "f2bbc3f5",
    "metadata": {},
    "source": [
     "# Job Search"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8343eeb4",
+   "id": "842f4832",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fade4dac",
+   "id": "f6288533",
    "metadata": {
     "hide-output": false
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa12b510",
+   "id": "4322ec8a",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f97c4fa1",
+   "id": "2bdf4e3a",
    "metadata": {
     "hide-output": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d70ba9c",
+   "id": "312a1bf2",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b3a7ba8",
+   "id": "4e739f65",
    "metadata": {},
    "source": [
     "### Set up\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c975340",
+   "id": "55b7e1ce",
    "metadata": {},
    "source": [
     "### Rewards\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4332627c",
+   "id": "f8c79003",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae7baa8b",
+   "id": "caaa915c",
    "metadata": {
     "hide-output": false
    },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ec0e3ac",
+   "id": "5f39fa86",
    "metadata": {},
    "source": [
     "The function below holds default values and populates the `namedtuple`."
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae6d6db1",
+   "id": "7dec4f55",
    "metadata": {
     "hide-output": false
    },
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39737d72",
+   "id": "698dcfe7",
    "metadata": {},
    "source": [
     "Let’s test it:"
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b817228b",
+   "id": "9b335058",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08f22906",
+   "id": "09a13e23",
    "metadata": {
     "hide-output": false
    },
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b56c2bba",
+   "id": "06396664",
    "metadata": {
     "hide-output": false
    },
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff7abe2b",
+   "id": "5142c625",
    "metadata": {
     "hide-output": false
    },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b2f80d7",
+   "id": "41056107",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator."
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47ea3383",
+   "id": "1bdf698e",
    "metadata": {
     "hide-output": false
    },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a2b035c",
+   "id": "a0860b8e",
    "metadata": {},
    "source": [
     "The next function computes the optimal policy under the assumption that $ v $ is\n",
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7515fe9",
+   "id": "3f265071",
    "metadata": {
     "hide-output": false
    },
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a0ef33e",
+   "id": "b43e4a3f",
    "metadata": {},
    "source": [
     "Here’s a routine for value function iteration."
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92b4f004",
+   "id": "be36739c",
    "metadata": {
     "hide-output": false
    },
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64b40072",
+   "id": "69b43119",
    "metadata": {},
    "source": [
     "## Computing the solution\n",
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a11c458",
+   "id": "688472c2",
    "metadata": {
     "hide-output": false
    },
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22e1706a",
+   "id": "0859ebf9",
    "metadata": {},
    "source": [
     "Here’s the optimal policy:"
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50fd9d2c",
+   "id": "5e88a418",
    "metadata": {
     "hide-output": false
    },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfd5cc2b",
+   "id": "74462d9b",
    "metadata": {},
    "source": [
     "We compute the reservation wage as the first $ w $ such that $ \\sigma(w)=1 $."
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdf35ffb",
+   "id": "5b0dd29b",
    "metadata": {
     "hide-output": false
    },
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b18cbfe",
+   "id": "1b9e6efb",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feef3c52",
+   "id": "1cd4a2ec",
    "metadata": {
     "hide-output": false
    },
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1471f8cb",
+   "id": "f1533835",
    "metadata": {},
    "source": [
     "Here’s a joint plot of the value function and the reservation wage."
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4ff8c96",
+   "id": "49f28df3",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6eab32f",
+   "id": "d596e0b8",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17df4529",
+   "id": "d2c97968",
    "metadata": {},
    "source": [
     "## Exercise 10.1\n",
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfa29b6a",
+   "id": "7f01f6ef",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06c66fdf",
+   "id": "8ed5fe33",
    "metadata": {},
    "source": [
     "Now you need to modify `T` and `get_greedy` and then run value function iteration again."
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2a4e141",
+   "id": "d7bacfe4",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 10.1](https://jax.quantecon.org/#job_search_1)"
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f977b60",
+   "id": "8dd8c437",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "881f515b",
+   "id": "c025998d",
    "metadata": {},
    "source": [
     "Let’s plot the results together with the original risk neutral case and see what we get."
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c4622eb",
+   "id": "b9ff69af",
    "metadata": {
     "hide-output": false
    },
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d2a0bb4",
+   "id": "52a3aa75",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a3f9d4e",
+   "id": "c806c9f8",
    "metadata": {},
    "source": [
     "The figure shows that the reservation wage under risk sensitive preferences (RS $ \\bar w $) shifts down.\n",
@@ -703,7 +703,7 @@
   }
  ],
  "metadata": {
-  "date": 1764377533.4894352,
+  "date": 1764489377.605637,
   "filename": "job_search.md",
   "kernelspec": {
    "display_name": "Python",
