--- a/lucas_model.ipynb
+++ b/lucas_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "64e6a3f2",
+   "id": "71fa59fd",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d6ae98d",
+   "id": "1de6ffb2",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "209b5a11",
+   "id": "67f1aaf2",
    "metadata": {},
    "source": [
     "# Asset Pricing: The Lucas Asset Pricing Model"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b77beb0c",
+   "id": "9755fcdb",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7836619",
+   "id": "e259bc42",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50431a23",
+   "id": "e08e77c3",
    "metadata": {
     "hide-output": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7395c0fd",
+   "id": "877b509c",
    "metadata": {},
    "source": [
     "## The Lucas Model\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26ff6b73",
+   "id": "c2ba0f6f",
    "metadata": {},
    "source": [
     "### Basic Setup\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bcda483",
+   "id": "a7ed1589",
    "metadata": {},
    "source": [
     "#### Assets\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db650fdd",
+   "id": "d55c90cb",
    "metadata": {},
    "source": [
     "#### Consumers\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7250af60",
+   "id": "2efa9086",
    "metadata": {},
    "source": [
     "### Pricing a Lucas Tree\n",
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5aad27f1",
+   "id": "77ca2023",
    "metadata": {},
    "source": [
     "#### The Dynamic Program\n",
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "403ac0c3",
+   "id": "9a5bd6d1",
    "metadata": {},
    "source": [
     "#### Next Steps\n",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0414c10d",
+   "id": "4fb5fa36",
    "metadata": {},
    "source": [
     "#### Equilibrium Constraints\n",
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0988ad4e",
+   "id": "9312cf6f",
    "metadata": {},
    "source": [
     "#### The Equilibrium Price Function\n",
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "865a1c86",
+   "id": "bc4c506d",
    "metadata": {},
    "source": [
     "### Solving the Model\n",
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "248bf497",
+   "id": "e115b346",
    "metadata": {},
    "source": [
     "#### Setting up the Problem\n",
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc3550fc",
+   "id": "a20968a5",
    "metadata": {},
    "source": [
     "#### A Little Fixed Point Theory\n",
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd40a3c5",
+   "id": "dec4173b",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78a7034a",
+   "id": "20ca3e6d",
    "metadata": {},
    "source": [
     "### Numba Code\n",
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12b6772a",
+   "id": "9d7ee55c",
    "metadata": {
     "hide-output": false
    },
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b378d045",
+   "id": "881cb8d4",
    "metadata": {},
    "source": [
     "Here’s a Numba-jitted version of the Lucas operator"
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d653ec5",
+   "id": "e720694b",
    "metadata": {
     "hide-output": false
    },
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ece43ac5",
+   "id": "9fbf1c3f",
    "metadata": {},
    "source": [
     "To solve the model, we write a function that iterates using the Lucas operator\n",
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6080de29",
+   "id": "ef09ce49",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7213ba50",
+   "id": "69c600b3",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the resulting price function"
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d71b33f0",
+   "id": "ee6f0092",
    "metadata": {
     "hide-output": false
    },
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a505d61a",
+   "id": "eb0fad7e",
    "metadata": {
     "hide-output": false
    },
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d862d4e",
+   "id": "953fdc2b",
    "metadata": {
     "hide-output": false
    },
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abf192c3",
+   "id": "cae9f81a",
    "metadata": {},
    "source": [
     "We see that the price is increasing, even if we remove all serial correlation\n",
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "662cdbaf",
+   "id": "5b8fe424",
    "metadata": {},
    "source": [
     "### JAX Code\n",
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3fd9038",
+   "id": "35f7746f",
    "metadata": {
     "hide-output": false
    },
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2506989a",
+   "id": "e9a23a36",
    "metadata": {},
    "source": [
     "We’ll use the following function to simultaneously compute the expectation\n",
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3e65cf6",
+   "id": "33a7634b",
    "metadata": {
     "hide-output": false
    },
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37fd18d1",
+   "id": "f82f8128",
    "metadata": {},
    "source": [
     "Here’s the Lucas operator"
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de19135b",
+   "id": "90e0816f",
    "metadata": {
     "hide-output": false
    },
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "910aad41",
+   "id": "eb0a48fc",
    "metadata": {},
    "source": [
     "We’ll use successive approximation to compute the fixed point."
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68313c5b",
+   "id": "e97830c8",
    "metadata": {
     "hide-output": false
    },
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3dd22e8",
+   "id": "bead173f",
    "metadata": {},
    "source": [
     "Here’s a function that solves the model"
@@ -869,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ec3f185",
+   "id": "36158622",
    "metadata": {
     "hide-output": false
    },
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ac5dbef",
+   "id": "36cf2b59",
    "metadata": {},
    "source": [
     "Now let’s solve the model again and compare timing"
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c99a2b82",
+   "id": "99ef48dd",
    "metadata": {
     "hide-output": false
    },
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0a3eac2",
+   "id": "1f2d3b3d",
    "metadata": {
     "hide-output": false
    },
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e62eb65e",
+   "id": "559148ee",
    "metadata": {},
    "source": [
     "Let’s check the solutions are similar"
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d622d70",
+   "id": "63a89833",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d0911e6",
+   "id": "5b083381",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eda082d9",
+   "id": "45d7d53c",
    "metadata": {},
    "source": [
     "## Exercise 8.1\n",
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50bf2bb8",
+   "id": "fef74500",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 8.1](https://jax.quantecon.org/#lucas_ex1)"
@@ -997,7 +997,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53763fec",
+   "id": "5e883866",
    "metadata": {
     "hide-output": false
    },
@@ -1020,7 +1020,7 @@
   }
  ],
  "metadata": {
-  "date": 1764377533.588352,
+  "date": 1764489377.6985898,
   "filename": "lucas_model.md",
   "kernelspec": {
    "display_name": "Python",
