--- a/troubleshooting.ipynb
+++ b/troubleshooting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0f7fb8c4",
+   "id": "7d8344f8",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e6ad90e",
+   "id": "f2e70a51",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4624598",
+   "id": "89070b3d",
    "metadata": {},
    "source": [
     "# Troubleshooting\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "159447f7",
+   "id": "58d1a147",
    "metadata": {},
    "source": [
     "## Fixing Your Local Environment\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dd8f0ac",
+   "id": "477fa833",
    "metadata": {},
    "source": [
     "## Reporting an Issue\n",
@@ -91,7 +91,7 @@
   }
  ],
  "metadata": {
-  "date": 1764377533.8826153,
+  "date": 1764489377.991164,
   "filename": "troubleshooting.md",
   "kernelspec": {
    "display_name": "Python",
