--- a/hopenhayn.ipynb
+++ b/hopenhayn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "004a591e",
+   "id": "caa78ef5",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9e7b326",
+   "id": "66b3939c",
    "metadata": {},
    "source": [
     "# The Hopenhayn Entry-Exit Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "370b10ed",
+   "id": "9ab6863f",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb632a53",
+   "id": "11a33cb7",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17c0e75c",
+   "id": "a25b6dee",
    "metadata": {
     "hide-output": false
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ef1884e",
+   "id": "479521ae",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9129e5e1",
+   "id": "8a944b4c",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2f60811",
+   "id": "ce8bd273",
    "metadata": {},
    "source": [
     "## The Model"
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a768f0c",
+   "id": "ad12ead2",
    "metadata": {},
    "source": [
     "### Environment\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e71a5c65",
+   "id": "4a2c67db",
    "metadata": {},
    "source": [
     "### Firm decisions\n",
@@ -186,7 +186,7 @@
     "The firm makes their stop-continue choice by first solving for the value function, which is the unique solution in a class of continuous functions $ \\mathscr C $ (details omitted) to\n",
     "\n",
     "\n",
-    "<a id='equation-8acafb95-05a8-4ef7-aafc-9cfd73eee1b1'></a>\n",
+    "<a id='equation-b037adbe-5f50-4e15-9255-d4a12c2a0198'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    v(\\varphi, p) = \\pi(\\varphi, p) + \\beta \n",
@@ -199,7 +199,7 @@
     "Given $ \\bar v $, we let $ \\bar \\varphi $ be the exit threshold function defined by\n",
     "\n",
     "\n",
-    "<a id='equation-a259b765-ab7c-4df8-af7c-0dd6118688ec'></a>\n",
+    "<a id='equation-7e14ae84-0c48-4d89-9667-f1a260acc86e'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\bar \\varphi(p) := \n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d94ef47",
+   "id": "cb3f71db",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -253,7 +253,7 @@
     "distribution of firms over productivity levels, such that the goods market clears, or\n",
     "\n",
     "\n",
-    "<a id='equation-72fd147e-f36f-4197-a6e6-49b0d66aff05'></a>\n",
+    "<a id='equation-d5de0e81-f47d-49dd-beb8-c3c07fcc7f96'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int q( \\varphi, p) \\mu(d \\varphi) = D(p),\n",
@@ -263,7 +263,7 @@
     "the *invariance condition* over the firm distribution\n",
     "\n",
     "\n",
-    "<a id='equation-f0871bbf-2703-44bb-85aa-9961f57daebb'></a>\n",
+    "<a id='equation-bf7848be-ad2e-4986-8301-92b45cd8bb51'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -277,7 +277,7 @@
     "holds (see below for intuition), the *equilibrium entry condition*\n",
     "\n",
     "\n",
-    "<a id='equation-47d5014c-a385-406a-ac39-a2d49989d65e'></a>\n",
+    "<a id='equation-e3f71a23-d5a3-43b0-9fe1-0ae9a5aad283'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int \\bar v( \\varphi, p) \\, \\gamma(d \\varphi) = c_e\n",
@@ -287,7 +287,7 @@
     "holds, and the *balanced entry and exit condition*\n",
     "\n",
     "\n",
-    "<a id='equation-446e989d-5973-4e12-952f-71993faa7d9b'></a>\n",
+    "<a id='equation-eb41702f-5fef-4253-8307-9bf66c7e8788'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    M = \\mu \\{ \\varphi < \\bar \\varphi(p) \\}\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3970ddc4",
+   "id": "acd23d64",
    "metadata": {},
    "source": [
     "### Computing equilibrium\n",
@@ -312,7 +312,7 @@
     "exit into the time invariance condition, yielding\n",
     "\n",
     "\n",
-    "<a id='equation-520040c3-c582-4215-a276-2a479860fa0f'></a>\n",
+    "<a id='equation-fbbbf2d6-0c6e-43d0-9e04-6b121fb7a97c'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -324,7 +324,7 @@
     "where $ \\Pi $ is the transition kernel on $ \\mathbb R_+ $ defined by\n",
     "\n",
     "\n",
-    "<a id='equation-5ef9f1cd-1879-4bbe-b02a-9f78e7d2886b'></a>\n",
+    "<a id='equation-5aadd08f-8dce-4ecb-99cb-026b9de743a1'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\Pi(\\varphi, B) \n",
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f62bb051",
+   "id": "65e92836",
    "metadata": {},
    "source": [
     "### Specification of dynamics\n",
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3d6fa30",
+   "id": "3504570c",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4755d736",
+   "id": "9de6cd59",
    "metadata": {
     "hide-output": false
    },
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "895ca98f",
+   "id": "bd00c73f",
    "metadata": {},
    "source": [
     "We store the parameters, grids and Monte Carlo draws in a `namedtuple`."
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6ce3a48",
+   "id": "5fcd3faf",
    "metadata": {
     "hide-output": false
    },
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09013fe0",
+   "id": "8d2b6386",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19aca5d7",
+   "id": "e7381750",
    "metadata": {
     "hide-output": false
    },
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20ecee2f",
+   "id": "0d9c63a9",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7592fb4",
+   "id": "3d2102b3",
    "metadata": {},
    "source": [
     "Let us write down functions for profits and output."
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c12391f",
+   "id": "e48be733",
    "metadata": {
     "hide-output": false
    },
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8beb8d98",
+   "id": "e97d1bbb",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "342464e9",
+   "id": "7a388c36",
    "metadata": {},
    "source": [
     "Let’s write code to simulate a cross-section of firms given a particular value for the exit threshold (rather than an exit threshold function).\n",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "801d609e",
+   "id": "9d63b142",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7005eff5",
+   "id": "fd6f5946",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "675b9aa0",
+   "id": "27cd7ed5",
    "metadata": {},
    "source": [
     "Our next function runs the cross-section forward in time `sim_length` periods."
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f2b0315",
+   "id": "9442a523",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e6981d7",
+   "id": "a268fac0",
    "metadata": {},
    "source": [
     "Here’s a utility function to compute the expected value\n",
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce45f43c",
+   "id": "4f228ef0",
    "metadata": {
     "hide-output": false
    },
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4531e793",
+   "id": "df6e4c0f",
    "metadata": {},
    "source": [
     "Now let’s vectorize this function in $ \\varphi $ and then write another function that computes the expected value across all $ \\varphi $ in `φ_grid`"
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1f35e55",
+   "id": "39c7e281",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9477cef9",
+   "id": "09a67f4b",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96f5d469",
+   "id": "075b3deb",
    "metadata": {},
    "source": [
     "Here is the Bellman operator $ T $."
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a43a9f50",
+   "id": "e2c9c784",
    "metadata": {
     "hide-output": false
    },
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0234bec0",
+   "id": "ab7a2203",
    "metadata": {},
    "source": [
     "The next function takes $ v, p $ as inputs and, conditional on the value function\n",
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d1056fc",
+   "id": "b0527945",
    "metadata": {
     "hide-output": false
    },
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b56c852",
+   "id": "03f8e7a4",
    "metadata": {},
    "source": [
     "We use value function iteration (VFI) to compute the value function $ \\bar v(\\cdot, p) $, taking $ p $ as given.\n",
@@ -780,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b097123a",
+   "id": "dfc4a220",
    "metadata": {
     "hide-output": false
    },
@@ -815,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c30fa17",
+   "id": "21cbd710",
    "metadata": {
     "hide-output": false
    },
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c06a7c8",
+   "id": "692ffcf3",
    "metadata": {},
    "source": [
     "We need to solve for the equilibrium price, which is the $ p $ satisfying\n",
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f3069e2",
+   "id": "4bad949f",
    "metadata": {
     "hide-output": false
    },
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c43a9612",
+   "id": "3bd9ab82",
    "metadata": {},
    "source": [
     "We are now ready to compute all elements of the stationary recursive equilibrium."
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a7cc9f5",
+   "id": "d5ad26ea",
    "metadata": {
     "hide-output": false
    },
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9463200",
+   "id": "7081df23",
    "metadata": {},
    "source": [
     "## Solving the model"
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf82dc6d",
+   "id": "014b10e5",
    "metadata": {},
    "source": [
     "### Preliminary calculations\n",
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25114d5b",
+   "id": "884e0eb4",
    "metadata": {
     "hide-output": false
    },
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49fbde98",
+   "id": "01df838b",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to compute the value function at a given price\n",
@@ -982,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11380797",
+   "id": "6d26ee4c",
    "metadata": {
     "hide-output": false
    },
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9939f02d",
+   "id": "e9f30512",
    "metadata": {},
    "source": [
     "Let’s run the code again to eliminate compile time."
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0022190",
+   "id": "c12efc58",
    "metadata": {
     "hide-output": false
    },
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f6a580a",
+   "id": "7e668d52",
    "metadata": {},
    "source": [
     "Let’s have a look at the net entry value as a function of price\n",
@@ -1026,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06246fed",
+   "id": "e9ebcfd8",
    "metadata": {
     "hide-output": false
    },
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3be217db",
+   "id": "4168e7ad",
    "metadata": {},
    "source": [
     "Below we solve for the zero of this function to calculate $ p* $.\n",
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "181b3bc7",
+   "id": "3457ebbd",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1071,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a1f9363",
+   "id": "8114dc96",
    "metadata": {
     "hide-output": false
    },
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51f659ed",
+   "id": "d29836ed",
    "metadata": {},
    "source": [
     "Let’s run the code again to get rid of compile time."
@@ -1093,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa4fc0e9",
+   "id": "a74e9333",
    "metadata": {
     "hide-output": false
    },
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b5eee8e",
+   "id": "cfa6a8c0",
    "metadata": {},
    "source": [
     "Let’s check that $ p^* $ is close to 1.5"
@@ -1115,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87b54ef5",
+   "id": "f1bc6217",
    "metadata": {
     "hide-output": false
    },
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f62e8134",
+   "id": "527126e7",
    "metadata": {},
    "source": [
     "Here is a plot of the value function $ \\bar v(\\cdot, p^*) $."
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afa293cd",
+   "id": "02a491cf",
    "metadata": {
     "hide-output": false
    },
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac38baa3",
+   "id": "0b6cefd9",
    "metadata": {},
    "source": [
     "Let’s have a look at the firm size distribution, with firm size measured by output."
@@ -1160,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e49aaa0f",
+   "id": "bbe5fa7a",
    "metadata": {
     "hide-output": false
    },
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4ea1d7a",
+   "id": "269f6c58",
    "metadata": {
     "hide-output": false
    },
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d422086b",
+   "id": "1d0d020e",
    "metadata": {},
    "source": [
     "## Pareto tails\n",
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "723343b0",
+   "id": "98de0241",
    "metadata": {
     "hide-output": false
    },
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "101fb4a9",
+   "id": "0992682e",
    "metadata": {},
    "source": [
     "Let’s plot the empirical counter CDF of the output distribution."
@@ -1266,7 +1266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0c76adf",
+   "id": "dde1161f",
    "metadata": {
     "hide-output": false
    },
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15500d5a",
+   "id": "16fe9d37",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0118785a",
+   "id": "11391223",
    "metadata": {},
    "source": [
     "## Exercise 19.1\n",
@@ -1310,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eef474a9",
+   "id": "534eb488",
    "metadata": {
     "hide-output": false
    },
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "508781cb",
+   "id": "34228b69",
    "metadata": {},
    "source": [
     "This plot is not linear — as expected, since we are using a folded normal distribution."
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78f08e2e",
+   "id": "72ad6711",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#hopen_ex1)"
@@ -1344,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f205facf",
+   "id": "63d05d9f",
    "metadata": {
     "hide-output": false
    },
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d8b0048",
+   "id": "ddc8892d",
    "metadata": {},
    "source": [
     "This looks very linear — the model generates Pareto tails.\n",
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "500359e2",
+   "id": "b3ef23ff",
    "metadata": {},
    "source": [
     "## Exercise 19.2\n",
@@ -1385,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "573ed27e",
+   "id": "a5651dd0",
    "metadata": {
     "hide-output": false
    },
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "409eac47",
+   "id": "6b6274c4",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.2](https://jax.quantecon.org/#hopen_ex2)"
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0a04de4",
+   "id": "68159909",
    "metadata": {
     "hide-output": false
    },
@@ -1429,7 +1429,7 @@
   }
  ],
  "metadata": {
-  "date": 1764377533.247296,
+  "date": 1764489377.3562195,
   "filename": "hopenhayn.md",
   "kernelspec": {
    "display_name": "Python",
