--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d0a6139f",
+   "id": "a5e63bae",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c4076ea",
+   "id": "c47b3a74",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c646457",
+   "id": "0199a718",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f97f58cc",
+   "id": "d85578f3",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32243d86",
+   "id": "10d45f7e",
    "metadata": {
     "hide-output": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cab4cb2f",
+   "id": "0087030b",
    "metadata": {},
    "source": [
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "030b5ff9",
+   "id": "9e0e3059",
    "metadata": {
     "hide-output": false
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd91507b",
+   "id": "7d3edc24",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4f234bb",
+   "id": "5389b9d1",
    "metadata": {
     "hide-output": false
    },
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49e7d8df",
+   "id": "08b7f5e9",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3ac94e2",
+   "id": "4b890863",
    "metadata": {
     "hide-output": false
    },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42a28680",
+   "id": "fc34e646",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb20ae4e",
+   "id": "d9cead05",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7caacba",
+   "id": "c4f32f9a",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0766a749",
+   "id": "391f28f2",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "271856f8",
+   "id": "880925ba",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aef592e0",
+   "id": "da9c9fe0",
    "metadata": {
     "hide-output": false
    },
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "543c2ac2",
+   "id": "d32d03b8",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3d6186c",
+   "id": "5192f648",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f805fd96",
+   "id": "1cd47149",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76a09640",
+   "id": "2fa7d402",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef501b7f",
+   "id": "074e6f73",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(9.15)](#equation-eq-ntecxdk).\n",
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f99e6ba",
+   "id": "32620349",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "436d0659",
+   "id": "000a9fc4",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa1024d7",
+   "id": "9be9358b",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b42478e8",
+   "id": "b902cdd7",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d812455f",
+   "id": "cf6c85ec",
    "metadata": {
     "hide-output": false
    },
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3166efd7",
+   "id": "c57bfaf0",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15d1fbaf",
+   "id": "98842cba",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "327af5d4",
+   "id": "91c1897d",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5dea7fd",
+   "id": "062cd2e1",
    "metadata": {
     "hide-output": false
    },
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cafabc3",
+   "id": "a5743cd3",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b36a9a90",
+   "id": "b37c66e6",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb7d87a1",
+   "id": "6cfa8f78",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "845c8c75",
+   "id": "dc1b6344",
    "metadata": {
     "hide-output": false
    },
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5f2936e",
+   "id": "5ac4abe8",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6447452a",
+   "id": "64cbaa7e",
    "metadata": {
     "hide-output": false
    },
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b775f6c9",
+   "id": "dbf49698",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4611aa0",
+   "id": "61473a73",
    "metadata": {
     "hide-output": false
    },
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e2d9bd3",
+   "id": "8fd76c13",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3e80691",
+   "id": "6565b912",
    "metadata": {
     "hide-output": false
    },
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d618da8a",
+   "id": "c8acf8bd",
    "metadata": {},
    "source": [
     "Let’s run it to compile."
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcc52b80",
+   "id": "d18e5694",
    "metadata": {
     "hide-output": false
    },
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cacb69e8",
+   "id": "4b4f40b9",
    "metadata": {},
    "source": [
     "Let’s run it again to remove the compile."
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9e73b28",
+   "id": "727b01e6",
    "metadata": {
     "hide-output": false
    },
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c70baaf8",
+   "id": "e617fe40",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1137,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f362b94d",
+   "id": "2ab616ae",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55a509dc",
+   "id": "db7e4fc3",
    "metadata": {
     "hide-output": false
    },
@@ -1171,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20a85b78",
+   "id": "c199cff7",
    "metadata": {
     "hide-output": false
    },
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec726f0a",
+   "id": "5502c346",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1200,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a7bec0c",
+   "id": "75c18864",
    "metadata": {
     "hide-output": false
    },
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc4b08ec",
+   "id": "b112c967",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "818dab8a",
+   "id": "8bfff897",
    "metadata": {
     "hide-output": false
    },
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a3b70bd",
+   "id": "cb0559a3",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eacbca64",
+   "id": "9dd2d15b",
    "metadata": {
     "hide-output": false
    },
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82642460",
+   "id": "dc86a3ee",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1323,7 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a80d81fe",
+   "id": "fd9a9d17",
    "metadata": {
     "hide-output": false
    },
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7bde919",
+   "id": "59e4dce2",
    "metadata": {
     "hide-output": false
    },
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79248c90",
+   "id": "305f6f4c",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1359,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4542065",
+   "id": "ea09bb55",
    "metadata": {
     "hide-output": false
    },
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "061b57fd",
+   "id": "e2c78814",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1382,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cecc53b4",
+   "id": "480bfa5a",
    "metadata": {
     "hide-output": false
    },
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbd00e26",
+   "id": "d8c78379",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71461d9c",
+   "id": "4a0a35d8",
    "metadata": {
     "hide-output": false
    },
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bd3f927",
+   "id": "6cd7f090",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1425,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b26ee7e",
+   "id": "85d10086",
    "metadata": {
     "hide-output": false
    },
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0baa2274",
+   "id": "e8be27dd",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1455,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a41974d4",
+   "id": "7d7d3eba",
    "metadata": {
     "hide-output": false
    },
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73b104a0",
+   "id": "3865c266",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1493,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b40288d3",
+   "id": "ffd0ccef",
    "metadata": {
     "hide-output": false
    },
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0aa8cae6",
+   "id": "234acaa1",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1524,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2007fb05",
+   "id": "9818e969",
    "metadata": {
     "hide-output": false
    },
@@ -1536,7 +1536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1dd369b",
+   "id": "406d7337",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1545,7 +1545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b3222c0",
+   "id": "f7b9967f",
    "metadata": {
     "hide-output": false
    },
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca0c204a",
+   "id": "9c4e9894",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1568,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f856a41",
+   "id": "7d240d30",
    "metadata": {
     "hide-output": false
    },
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f4a17d1",
+   "id": "808c6a7d",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1591,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbf0cd48",
+   "id": "9af523a6",
    "metadata": {
     "hide-output": false
    },
@@ -1602,7 +1602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aae8a9c5",
+   "id": "78955f16",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1611,7 +1611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd5553b3",
+   "id": "ea6c483a",
    "metadata": {
     "hide-output": false
    },
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97de518d",
+   "id": "51f1e867",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c601d855",
+   "id": "cf187173",
    "metadata": {
     "hide-output": false
    },
@@ -1650,7 +1650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32b1c222",
+   "id": "bbd8ca63",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1661,7 +1661,7 @@
   }
  ],
  "metadata": {
-  "date": 1764377533.639348,
+  "date": 1764489377.7492776,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
