--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8af444cd",
+   "id": "57ac9713",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2eeacbbc",
+   "id": "6b687dd5",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe8016ce",
+   "id": "d806a9c9",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "323d681f",
+   "id": "63f4ebfb",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa1f64d9",
+   "id": "3ce7286d",
    "metadata": {
     "hide-output": false
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e726908",
+   "id": "871ea939",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d87ddd38",
+   "id": "ea006202",
    "metadata": {
     "hide-output": false
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4a2fee3",
+   "id": "2b990acc",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54f4375c",
+   "id": "35a33c64",
    "metadata": {
     "hide-output": false
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9405b89",
+   "id": "6a2f9588",
    "metadata": {},
    "source": [
     "## MLE with numerical methods (JAX)\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "290f7d1f",
+   "id": "fcc63c69",
    "metadata": {},
    "source": [
     "### A toy model\n",
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20e60e74",
+   "id": "62d817e1",
    "metadata": {
     "hide-output": false
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c39cadd8",
+   "id": "83b415e3",
    "metadata": {},
    "source": [
     "To find the value of $ \\frac{d \\log \\mathcal{L(\\boldsymbol{\\beta})}}{d \\boldsymbol{\\beta}} $, we can use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html) which auto-differentiates the given function.\n",
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48626226",
+   "id": "7f928690",
    "metadata": {
     "hide-output": false
    },
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f8a90a4",
+   "id": "a8fb1f0b",
    "metadata": {
     "hide-output": false
    },
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "856bfffe",
+   "id": "fa955fb1",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc7ca23d",
+   "id": "60deeff8",
    "metadata": {},
    "source": [
     "### A Poisson model\n",
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50e58f89",
+   "id": "b5fb8c82",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67ec6d11",
+   "id": "3dba75c5",
    "metadata": {},
    "source": [
     "The log likelihood function of the Poisson regression is\n",
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4619d47",
+   "id": "d047797f",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e6309eb",
+   "id": "3a461f0d",
    "metadata": {},
    "source": [
     "Now we can define the log likelihood function in Python"
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7acf356d",
+   "id": "bdd3421d",
    "metadata": {
     "hide-output": false
    },
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0df3561d",
+   "id": "e83f3dbf",
    "metadata": {},
    "source": [
     "To find the gradient of the `poisson_logL`, we again use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html).\n",
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "255c65d2",
+   "id": "3fce9b79",
    "metadata": {
     "hide-output": false
    },
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87a51d09",
+   "id": "136af354",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `RegressionModel` object\n",
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ce369c8",
+   "id": "7c4f64c6",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c27829b",
+   "id": "9d90c504",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "250c7b14",
+   "id": "01a76b8f",
    "metadata": {
     "hide-output": false
    },
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cdb1433",
+   "id": "cd0e1202",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bd68eee",
+   "id": "39dc8baa",
    "metadata": {
     "hide-output": false
    },
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bf3b278",
+   "id": "78fa609d",
    "metadata": {},
    "source": [
     "## MLE with `statsmodels`\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20d12dc9",
+   "id": "a98d79b4",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86864837",
+   "id": "ef621336",
    "metadata": {
     "hide-output": false
    },
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba0212fd",
+   "id": "fd1538d2",
    "metadata": {},
    "source": [
     "The benefit of writing our own procedure, relative to statsmodels is that\n",
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ff3a138",
+   "id": "2b63075d",
    "metadata": {},
    "source": [
     "## Exercise 21.1\n",
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "079f4025",
+   "id": "8d5d4dbc",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 21.1](https://jax.quantecon.org/#newton_mle1)\n",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01c68f13",
+   "id": "23455111",
    "metadata": {
     "hide-output": false
    },
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ae9fb3b",
+   "id": "918485cb",
    "metadata": {},
    "source": [
     "To simulate the model, we sample 500,000 values of $ x_t $ from the standard normal distribution."
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9573c26",
+   "id": "e6aa3a3f",
    "metadata": {
     "hide-output": false
    },
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5bac974",
+   "id": "8c38b743",
    "metadata": {},
    "source": [
     "We compute $ \\lambda $ using [(21.1)](#equation-lambda-mle)"
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ae4b5a3",
+   "id": "72500de2",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2145ce6b",
+   "id": "a17453a9",
    "metadata": {},
    "source": [
     "Let’s define $ y_t $ by sampling from a Poisson distribution with mean as $ \\lambda_t $."
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc41da30",
+   "id": "d17abd68",
    "metadata": {
     "hide-output": false
    },
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16d00622",
+   "id": "1facfcc8",
    "metadata": {},
    "source": [
     "Now let’s try to recover the true parameter values using the Newton-Raphson\n",
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85639cf6",
+   "id": "28595c19",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b4cda23",
+   "id": "a04d0f8a",
    "metadata": {},
    "source": [
     "The maximum likelihood estimates are similar to the true parameter values."
@@ -720,7 +720,7 @@
   }
  ],
  "metadata": {
-  "date": 1764377533.664916,
+  "date": 1764489377.7744973,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
