--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "40e0e539",
+   "id": "e4f8b861",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "651f0523",
+   "id": "aefd6d48",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2be7c317",
+   "id": "3c63f35b",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10e552a3",
+   "id": "c0cbf7bf",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4ff6be5",
+   "id": "24bfe59e",
    "metadata": {
     "hide-output": false
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d813237",
+   "id": "92a8af44",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68f05976",
+   "id": "10039e0b",
    "metadata": {
     "hide-output": false
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf2863f2",
+   "id": "eee8f093",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e5ecb27",
+   "id": "f616c3ed",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b273619d",
+   "id": "f936e8da",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "249ef05a",
+   "id": "cde9ec90",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e3dc06d",
+   "id": "2aaf3bb4",
    "metadata": {
     "hide-output": false
    },
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fab55e14",
+   "id": "ffddbcc2",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7084774",
+   "id": "6f8a0ccc",
    "metadata": {
     "hide-output": false
    },
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20537683",
+   "id": "2afbfb60",
    "metadata": {
     "hide-output": false
    },
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8679a245",
+   "id": "af6d5d94",
    "metadata": {
     "hide-output": false
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd117555",
+   "id": "405936af",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4794593",
+   "id": "f822819f",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79d714a5",
+   "id": "52bedb85",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87b463fa",
+   "id": "821d9412",
    "metadata": {
     "hide-output": false
    },
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4318e01b",
+   "id": "ad71e1cc",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b82964c",
+   "id": "9b5d054a",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d6dded5",
+   "id": "8cb5eeb7",
    "metadata": {},
    "source": [
     "## Exercise 13.1\n",
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c57ebc52",
+   "id": "e5dfbc24",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b173c67f",
+   "id": "da7f0a1a",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 13.1](https://jax.quantecon.org/#short_path_ex1)\n",
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d41f9b5a",
+   "id": "313f9517",
    "metadata": {
     "hide-output": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e695a4ce",
+   "id": "124d3aae",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "507372b6",
+   "id": "9ccad8c8",
    "metadata": {
     "hide-output": false
    },
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ad7645d",
+   "id": "e4ee8707",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67ef7d34",
+   "id": "a1708e51",
    "metadata": {
     "hide-output": false
    },
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3d59b6b",
+   "id": "6da2499b",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd6a01fd",
+   "id": "4cddebb7",
    "metadata": {
     "hide-output": false
    },
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a62e19ad",
+   "id": "3d24c6fe",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b4b5918",
+   "id": "922cd512",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fc38da7",
+   "id": "86173608",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5341a10",
+   "id": "19619e99",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4bf1a83",
+   "id": "c344b01c",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c1d7b52",
+   "id": "21985bb2",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81394512",
+   "id": "e5533172",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +649,7 @@
   }
  ],
  "metadata": {
-  "date": 1764377533.8602006,
+  "date": 1764489377.968662,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
