--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2298792f",
+   "id": "0a2015b0",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f1823b1",
+   "id": "93b3578a",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "094b01e1",
+   "id": "3d731d4a",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e57a66b",
+   "id": "83cb5ccd",
    "metadata": {
     "hide-output": false
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98c5c3cb",
+   "id": "8aec4a6a",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f856822",
+   "id": "dc558635",
    "metadata": {
     "hide-output": false
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8b23749",
+   "id": "eb1a3bc2",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55ccc8af",
+   "id": "a07b5d4f",
    "metadata": {
     "hide-output": false
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "747bee4a",
+   "id": "6a466b66",
    "metadata": {},
    "source": [
     "## Wealth dynamics\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29334554",
+   "id": "9a21abd6",
    "metadata": {},
    "source": [
     "## Implementation"
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb50ce9d",
+   "id": "2da433ca",
    "metadata": {},
    "source": [
     "### Numba implementation\n",
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7faf9f45",
+   "id": "bc1f16c6",
    "metadata": {
     "hide-output": false
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02ef36e4",
+   "id": "5268a650",
    "metadata": {},
    "source": [
     "Here’s a function that generates the aggregate state process"
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e455ae65",
+   "id": "aa389708",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bea1c44d",
+   "id": "32142353",
    "metadata": {},
    "source": [
     "Here’s a function that updates household wealth by one period, taking the\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1a44490",
+   "id": "ae2b0fb1",
    "metadata": {
     "hide-output": false
    },
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "441afb19",
+   "id": "16560186",
    "metadata": {},
    "source": [
     "Here’s a function to simulate the time series of wealth for an individual household"
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f179c9b6",
+   "id": "ce81711e",
    "metadata": {
     "hide-output": false
    },
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4a5016e",
+   "id": "1dd582aa",
    "metadata": {},
    "source": [
     "Let’s look at the wealth dynamics of an individual household"
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d799ee8",
+   "id": "ae774e80",
    "metadata": {
     "hide-output": false
    },
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c128cc16",
+   "id": "d4dabdb8",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d395c731",
+   "id": "dcce79e9",
    "metadata": {},
    "source": [
     "Notice the large spikes in wealth over time.\n",
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f5f352b",
+   "id": "948fdca9",
    "metadata": {
     "hide-output": false
    },
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cc44ef8",
+   "id": "7740527b",
    "metadata": {},
    "source": [
     "Parallelization works in the function above because the time path of each\n",
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86416785",
+   "id": "5b09f88f",
    "metadata": {
     "hide-output": false
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3f06901",
+   "id": "ccc9a3b0",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a453d68d",
+   "id": "cc770051",
    "metadata": {
     "hide-output": false
    },
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "885c7118",
+   "id": "cf985d68",
    "metadata": {},
    "source": [
     "### JAX implementation\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4016e843",
+   "id": "15bb2126",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc0e1fff",
+   "id": "c740c19a",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to shift the cross-section of households forward\n",
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0899b0be",
+   "id": "084ce934",
    "metadata": {
     "hide-output": false
    },
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d352f994",
+   "id": "6b6583cc",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8af556d5",
+   "id": "2f9f31f6",
    "metadata": {
     "hide-output": false
    },
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65cad35f",
+   "id": "0ea15340",
    "metadata": {},
    "source": [
     "And let’s see how long it takes if we compile the loop."
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68698ab4",
+   "id": "f0cfbbbe",
    "metadata": {
     "hide-output": false
    },
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06dbe1e5",
+   "id": "2b59dbe1",
    "metadata": {
     "hide-output": false
    },
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb88890f",
+   "id": "e72cfe12",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caa0d71f",
+   "id": "6acb4346",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "066b1be9",
+   "id": "2444eb5a",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "148a6341",
+   "id": "7e4d6c63",
    "metadata": {},
    "source": [
     "### Pareto tails\n",
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a0013c1",
+   "id": "3a48b44a",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bad27284",
+   "id": "802c5014",
    "metadata": {},
    "source": [
     "### Lorenz curves and Gini coefficients\n",
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "144424c0",
+   "id": "3361eeb5",
    "metadata": {},
    "source": [
     "#### Lorenz curve\n",
@@ -800,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3e81f3b",
+   "id": "7e32db02",
    "metadata": {
     "hide-output": false
    },
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "919af5d1",
+   "id": "a83b1702",
    "metadata": {},
    "source": [
     "Let’s test"
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1ee35fc",
+   "id": "266b31f1",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd846553",
+   "id": "731f2c64",
    "metadata": {
     "hide-output": false
    },
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26014ffb",
+   "id": "4bbbe57a",
    "metadata": {
     "hide-output": false
    },
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4bc15b8",
+   "id": "7d7e2d8e",
    "metadata": {
     "hide-output": false
    },
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2e7a77a",
+   "id": "f5323204",
    "metadata": {
     "hide-output": false
    },
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45432054",
+   "id": "9998f6b9",
    "metadata": {},
    "source": [
     "#### Gini Coefficient\n",
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72c430a7",
+   "id": "ebcc04f8",
    "metadata": {
     "hide-output": false
    },
@@ -940,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e14563f",
+   "id": "e112cfab",
    "metadata": {
     "hide-output": false
    },
@@ -952,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "729356b0",
+   "id": "76edd771",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "badc6756",
+   "id": "d7356488",
    "metadata": {
     "hide-output": false
    },
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3bd0ea2",
+   "id": "0657d1ea",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dfd5bce",
+   "id": "64a91c11",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ad1fe88",
+   "id": "53477f2c",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#wd_ex1)\n",
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b6c62fb",
+   "id": "b636ec72",
    "metadata": {
     "hide-output": false
    },
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e273829",
+   "id": "4b4431f0",
    "metadata": {
     "hide-output": false
    },
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc7c1a99",
+   "id": "b25e83c4",
    "metadata": {
     "hide-output": false
    },
@@ -1053,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c36b9200",
+   "id": "5484a185",
    "metadata": {
     "hide-output": false
    },
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2af98fec",
+   "id": "eb0c01d3",
    "metadata": {},
    "source": [
     "## Exercise 7.2\n",
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8667236c",
+   "id": "ffc5cb46",
    "metadata": {
     "hide-output": false
    },
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5c35ff5",
+   "id": "69a89cce",
    "metadata": {},
    "source": [
     "Use the following as your initial cross-sectional distribution"
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ac5d97a",
+   "id": "fc5c2987",
    "metadata": {
     "hide-output": false
    },
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3715dc89",
+   "id": "5fa55068",
    "metadata": {},
    "source": [
     "Once you have done that, plot the Gini coefficients as well.\n",
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a07d54e",
+   "id": "7b71ba05",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.2](https://jax.quantecon.org/#wd_ex2)\n",
@@ -1144,7 +1144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9109653c",
+   "id": "c98e5bd0",
    "metadata": {
     "hide-output": false
    },
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "105299d8",
+   "id": "f2960abe",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -1180,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2642a9fc",
+   "id": "433da141",
    "metadata": {
     "hide-output": false
    },
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "987d8095",
+   "id": "1198212c",
    "metadata": {},
    "source": [
     "As expected, inequality increases as returns on financial income rise."
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab3072c8",
+   "id": "85d531c1",
    "metadata": {},
    "source": [
     "## Exercise 7.3\n",
@@ -1216,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "248d5fd2",
+   "id": "e8dfbe3a",
    "metadata": {
     "hide-output": false
    },
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70101746",
+   "id": "8b10b0ef",
    "metadata": {},
    "source": [
     "To isolate the role of volatility, set $ \\mu_r = - \\sigma_r^2 / 2 $ at each $ \\sigma_r $.\n",
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "490d728a",
+   "id": "75e2d0d7",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.3](https://jax.quantecon.org/#wd_ex3)\n",
@@ -1248,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8096f7ff",
+   "id": "1339df73",
    "metadata": {
     "hide-output": false
    },
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a5e72a6",
+   "id": "ed40c232",
    "metadata": {
     "hide-output": false
    },
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da8c1da5",
+   "id": "1dacdfaf",
    "metadata": {},
    "source": [
     "## Exercise 7.4\n",
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bfeab63",
+   "id": "40d8b926",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.4](https://jax.quantecon.org/#wd_ex4)\n",
@@ -1325,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6d380a5",
+   "id": "8c04336f",
    "metadata": {
     "hide-output": false
    },
@@ -1364,7 +1364,7 @@
   }
  ],
  "metadata": {
-  "date": 1764377533.9166317,
+  "date": 1764489378.028883,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
